# sqlx-sqlite

./: .env  Cargo.toml  todos.sqlite
src/: main.rs
