[package]
name = "sqlx-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-native-tls"] }
paw = "1.0"
structopt = { version = "0.3", features = ["paw"] }
tokio = { version = "1.0", features = ["macros"] }
anyhow = "1.0"
dotenv = "0.15"
chrono = "0.4"
